--- a/example/index.html
+++ b/example/index.html
@@ -11,5 +11,7 @@
   <body>
     hello world
   </body>
-  <script src="../src/index.js" type="module"></script>
+  <script type="module">
+    import  { test } from "../src/index.js"
+  </script>
 </html>
