--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
     <!-- <link rel="stylesheet" href="index.css" /> -->
   </head>
+  <!-- 引入样式 -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"
+  />
   <style>
     button {
       width: 200px;
@@ -36,9 +41,12 @@
       file
     </div>
   </body>
+  <!-- 引入组件库 -->
+  <script src="https://unpkg.com/vue@2/dist/vue.js"></script>
+  <!-- import JavaScript -->
+  <script src="https://unpkg.com/element-ui/lib/index.js"></script>
   <script type="module">
     import selfMoudle from "../src/index.js";
-    import Vue from "./vue.js";
     new Vue({
       el: "#app",
       data() {
